--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="assets/img/icon-moon.svg" type="image/x-icon">
+
     <title>Portifólio Simples</title>
 </head>
+
 <body>
-    
+    <main class="conteudo">
+        <section class="conteudo-descricao">
+            <div class="conteudo-descricao-texto">
+                <h1 class="conteudo-descricao-texto-titulo">Eleve seu negócio digital a outro nível <strong
+                        class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+                <p class="conteudo-descricao-texto-paragrafo">Olá! Sou a Luana Mendes, desenvolvedora
+                    Front-end com especialidade em Javascript, HTML e
+                    CSS. Ajudo pequenos negócios e designers a
+                    colocarem em prática boas ideias. Vamos
+                    conversar?</p>
+            </div>
+
+            <div class="conteudo-descricao-botoes">
+                <a class="conteudo-descricao-botoes-btn" href="https://instagram.com/luuanamendes">Instagram</a>
+                <a class="conteudo-descricao-botoes-btn" href="https://github.com/luuanamendes">GitHub</a>
+            </div>
+        </section>
+
+        <img src="assets/img/foto-luana.png" alt="Foto Luana Mendes">
+    </main>
 </body>
+
 </html>
