--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main class="conteudo">
         <section class="conteudo-descricao">
             <div class="conteudo-descricao-texto">
-                <h1 class="conteudo-descricao-texto-titulo">Eleve seu negócio digital a outro nível <strong
+                <h1>Eleve seu negócio digital a outro nível <strong
                         class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-                <p class="conteudo-descricao-texto-paragrafo">Olá! Sou a Luana Mendes, desenvolvedora
+                <p>Olá! Sou a Luana Mendes, desenvolvedora
                     Front-end com especialidade em Javascript, HTML e
                     CSS. Ajudo pequenos negócios e designers a
                     colocarem em prática boas ideias. Vamos
